--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
+    "@supabase/supabase-js": "^2.47.10",
     "firebase": "^10.12.2",
     "firebase-tools": "^13.10.2",
     "rxjs": "~7.8.0",
